--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=eventos
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/eventdb
+spring.datasource.username=seu_usuario
+spring.datasource.password=sua_senha
+
+# Flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+
