--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 spring.application.name=eventos
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/eventdb
-spring.datasource.username=seu_usuario
-spring.datasource.password=sua_senha
+spring.datasource.username=postgres
+spring.datasource.password=root
 
 # Flyway
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
 
